fixed color contrast issues with login warning messages

--- a/Source/Plugins/Core/com.equella.core/resources/web/sass/legacy.scss
+++ b/Source/Plugins/Core/com.equella.core/resources/web/sass/legacy.scss
@@ -3932,11 +3932,11 @@ div.universaliframe iframe {
 }
 
 p.warning {
-  background-color: #f90;
-  border: 1px solid red;
+  background-color: #fdd;
   margin-bottom: 20px;
   padding: 10px;
   text-align: center;
+  color: #b90202;
 }
 
 .warningimg {
